@@ -40,6 +40,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - viewer - uploadCommand can now use INSECURE-ORIGINALNAME to access uploaded filename
   - viewer - shortcut display improvements
   - viewer - didn't decrypt pcap for large packets correctly (issue #1756)
+  - viewer - support wiseURL for wise.js viewer plugin (issue #1758)
   - wise - handle empty config file on startup
   - wise - support ./ with value-actions
 
